// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VListGroup.js should render a component with no padding for action icon and match snapshot 1`] = `

<div class="list--group__container">
  <div class="list--group__header list--group__header--no-action">
  </div>
  <ul class="list list--group"
      style="display: none;"
  >
  </ul>
</div>

`;

exports[`VListGroup.js should render a component with route namespace and match snapshot 1`] = `

<div class="list--group__container">
  <div class="list--group__header">
  </div>
  <ul class="list list--group"
      style="display: none;"
  >
  </ul>
</div>

`;

exports[`VListGroup.js should render a lazy component and match snapshot 1`] = `

<div class="list--group__container">
  <div class="list--group__header">
  </div>
  <ul class="list list--group"
      style="display: none;"
  >
  </ul>
</div>

`;

exports[`VListGroup.js should render component and match snapshot 1`] = `

<div class="list--group__container">
  <div class="list--group__header">
  </div>
  <ul class="list list--group"
      style="display: none;"
  >
  </ul>
</div>

`;
